<resources>
    <string name="app_name">CounterApp</string>
    <string name="activity_main_plus_btn_txt">+</string>
    <string name="activity_main_minus_txt">-</string>
    <string name="acticity_main_unable_to_decrement">Unable to decrement</string>
</resources>